--- a/index.html
+++ b/index.html
@@ -6,11 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p1>hhhhhhhhh</p1>
-    <p1>hhhhhhhhh</p1>
-    <p1>hhhhhhhhh</p1>
-    <p1>hhhhhhhhh</p1>
-    <p1>hhhhhhhhh</p1>
-    <p1>hhhhhhhhh</p1>
+   <p1> last updates</p1>
 </body>
 </html>
