--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-   <p1> last updates</p1>
+    <span style="color:red">Red Text</span>
 </body>
 </html>
